--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,43 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  
+    <!-- Preload fonts for better performance -->
+    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v22/4UzDkCkUz7ocWi6FAtL6IWcNGA.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  
+    <!-- Fallback in case JS is disabled -->
+    <noscript>
+      <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Montserrat:wght@300;500;600;700&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    </noscript>
+  
+    <!-- Material symbols stylesheet -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
+    
     <style>
       .material-symbols-outlined {
         font-variation-settings:
-        'FILL' 0,
-        'wght' 400,
-        'GRAD' 0,
-        'opsz' 48
+          'FILL' 0,
+          'wght' 400,
+          'GRAD' 0,
+          'opsz' 48;
       }
-      </style>
+      body {
+        font-family: 'Montserrat', 'Roboto', 'Cinzel', Arial, sans-serif;
+      }
+    </style>
   </head>
+  
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- Main React app container -->
     <div id="root"></div>
 
   </body>
