--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,7 @@
     <!-- Preload fonts for better performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
-  
-  
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap&subset=latin,cyrillic" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
@@ -23,16 +20,11 @@
           'GRAD' 0,
           'opsz' 48;
       }
-      body {
-        font-family: 'Montserrat', 'Roboto', 'Cinzel', Arial, sans-serif;
-      }
     </style>
   </head>
   
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
-    <!-- Main React app container -->
     <div id="root"></div>
 
   </body>
